--- a/README.html
+++ b/README.html
@@ -5,6 +5,14 @@ operating system for very low cost single board microcomputers. With MuntsOS
 installed, such microcomputers can treated as components, as <i>Linux
 microcontrollers</i>, and integrated into other projects just like traditional
 single chip microcontrollers.</p>
+<h2>News</h2>
+<ul>
+<li>24 August 2022 -- Migrated Raspberry Pi 2, 3, 4 to Linux kernel 5.15.x.
+Migrating to 5.15.x has proved to be a grueling exercise, easily the most
+difficult kernel migration in the history of MuntsOS Embedded Linux. Linux
+kernel 5.15.x still doesn't work right on Raspberry Pi 1 boards, so they are
+still frozen at kernel 5.10.95 for the moment.</li>
+</ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
 environment onto a <b>host computer</b> are found in <a href=
