--- a/README.html
+++ b/README.html
@@ -20,6 +20,8 @@ Crosstoo-NG release 1.24.0, providing GCC 8.3.0. The Raspberry Pi 1 kernel has
 now been advanced to 5.15.61, as with the Raspberry Pi 2/3/4. MuntsOS for the
 ARMv6 Raspberry Pi 1 is now in maintenance mode. I will keep supporting the
 Raspberry Pi 1 for as long as possible.</li>
+<li>15 September 2022 -- Refreshed the MuntsOS cross-toolchain tarballs and the
+virtual machine appliance.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
