Dropped support for toolchain tarballs
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20491 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/README.html
+++ b/README.html
@@ -413,12 +413,8 @@ the Raspberry Pi 3).</p>
 <a href="http://repo.munts.com/debian11">http://repo.munts.com/debian11</a>
 <p>Since they are statically linked, it may be possible to use these
 cross-toolchain packages on other Linux distributions (possibly with the help
-off a conversion utility like <a href=
+of a package conversion utility like <a href=
 "https://admin.fedoraproject.org/pkgdb/package/rpms/alien"><b><tt>alien</tt></b></a>).</p>
-<p>For the convenience of users of Linux distributions other than Debian,
-snapshot toolchain tarballs for each platform family are available at:</p>
-<p><a href=
-"http://repo.munts.com/muntsos/toolchains">http://repo.munts.com/muntsos/toolchains</a></p>
 <h2>Git Repository</h2>
 <p>The source code for MuntsOS is available at:</p>
 <p><a href=
