--- a/README.html
+++ b/README.html
@@ -27,6 +27,8 @@ it will no longer be necessary to clone the MuntsOS Embedded Linux source code
 repository for developing application programs. Refreshed the virtual machine
 appliance <b><tt>Debian11-MuntsOS-Dev.ova</tt></b>. Removed the cross-toolchain
 tarballs from the repository.</li>
+<li>10 December 2022 -- Refreshed the BeagleBone kernel (still 5.4.x). Added
+TCP Blast extension package, for network performance testing.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
