--- a/README.html
+++ b/README.html
@@ -42,7 +42,14 @@ environment onto a <b>host computer</b> are found in <a href=
 "http://git.munts.com/muntsos/doc/AppNote1-Setup-Debian.pdf">Application Note
 #1</a>, <a href=
 "http://git.munts.com/muntsos/doc/AppNote2-Setup-Tarballs.pdf">Application Note
-#2</a>, and <a href="">Application Note #8</a>.</p>
+#2</a>, and <a href=
+"http://git.munts.com/muntsos/doc/AppNote8-Setup-RPM.pdf">Application Note
+#8</a>. Or just download and run one of the following quick setup scripts:</p>
+<p><a href=
+"http://git.munts.com/muntsos/scripts/setup-debian">setup-debian</a><br>
+<a href=
+"http://git.munts.com/muntsos/scripts/setup-fedora">setup-fedora</a><br>
+<a href="http://git.munts.com/muntsos/scripts/setup-rhel">setup-rhel</a></p>
 <p>Instructions for installing MuntsOS to a <b>target computer</b> are found in
 <a href=
 "http://git.munts.com/muntsos/doc/AppNote3-Installation-from-Linux.pdf">Application
