--- a/README.html
+++ b/README.html
@@ -7,56 +7,14 @@ microcontrollers</i>, and integrated into other projects just like traditional
 single chip microcontrollers.</p>
 <h2>News</h2>
 <ul>
-<li>9 March 2023 -- <a href="https://alire.ada.dev">Alire</a> crates for
-targeting MuntsOS Embedded Linux have been published. All you need to do
-prepare an Alire project for for a MuntsOS target is:
-<pre>
-alr init --bin myprogram
-cd myprogram
-alr with muntsos_raspberrypi1
-</pre>
-The new crates (<b><tt>muntsos_beaglebone</tt></b>,
-<b><tt>muntsos_raspberrypi1</tt></b>, <b><tt>muntsos_raspberrypi2</tt></b>,
-<b><tt>muntsos_raspberrypi3</tt></b>, and <b><tt>muntsos_raspberrypi4</tt></b>)
-each point to one of the MuntsOS cross-toolchains, which still have to be
-installed exactly as before. <a href=
-"http://git.munts.com/muntsos/doc/AppNote7-Flash-LED-Ada-Alire.pdf">Application
-Note #7</a> has been updated accordingly.</li>
-<li>14 March 2023 -- New kernels with many, many updated components have been
-published.</li>
-<li>Dropped support for the virtual machine appliance preloaded with
-cross-toolchains for MuntsOS Embedded Linux. It was just too big to
-upload.</li>
-<li>16 March 2023 -- Cross-toolchain RPM packages are now being published.
-These contain the exact same statically linked binaries originally built on
-Debian 11. They are verified to work on Fedora 37, RHEL 9.1 and its derivatives
-CentOS Stream 9, AlmaLinux 9.1, and Rocky Linux 9.1. Available at: <a href=
-"http://repo.munts.com/muntsos/rpms">http://repo.munts.com/muntsos/rpms</a>.</li>
-<li>20 September 2023 -- After a long (years) hiatus, I have successfully built
-MuntsOS cross-toolchains for Debian 12 using <a href=
-"https://wiki-archive.linaro.org/ABE">Linaro ABE</a> (Advanced Build
-Environment) using manifests derived from the latest <a href=
-"https://developer.arm.com/downloads/-/arm-gnu-toolchain-downloads">Arm GNU
-Toolchain</a> release 12.3.Rel1.<br></li>
-<li>8 December 2023 -- <a href=
-"https://crosstool-ng.github.io/2023/09/24/release-1.26.0.html">Crosstool-NG
-1.26.0</a> has been released. I have rebuilt all of the MuntsOS
-cross-toolchains on Debian 12 (Bookworm), bumping GCC to 13.2.0 and picking up
-the Modula-2 programming language. The <a href=
-"https://developer.arm.com/downloads/-/arm-gnu-toolchain-downloads">Arm GNU
-Toolchain version 13.2.Rel1</a> has also been released and I will be
-experimenting with it as well. The advantage of Crosstool-NG is that its
-program files can be linked statically, and should run on any recent Linux
-distribution. The advantage of Arm GNU is that it is updated far more
-frequently, at least twice a year.</li>
-<li>28 December 2023 -- Renamed the MuntsOS cross-toolchain metapackage from
-<b><tt>muntsos-dev-ctng-2.0</tt></b> to <b><tt>muntsos-dev-9.0</tt></b> to
-solve an Alire package conundrum.</li>
-<li>29 December 2023 -- MuntsOS GCC 13.2.0 cross-toolchains running on ARM64
-Linux are now available. I built these on a Raspberry Pi CM4 with 8 GB of RAM
-running Ubuntu 23.10 (for the GCC 13 native toolchain necessary to build my
-cross-toolchains). Each cross-toolchain took about 5 hours to build. They run
-on 64-bit Raspberry Pi OS and on low cost ARM Chromebooks.</li>
+<li>1 January 2024 -- I have decided to freeze all development for 32-bit
+kernels. The 32-bit BeagleBone kernel is frozen at 5.4.106. The 32-bit
+Raspberry Pi 1 and 2 kernels are frozen at 5.15.92. The frozen 32-bit kernels
+will still be rebuilt regularly to incorporate userland improvements.<br>
+The 64-bit Raspberry Pi 3 and 4 kernels have been upgraded to 6.1.69 and will
+track <a href=
+"https://github.com/raspberrypi/linux">https://github.com/raspberrypi/linux</a>
+again.</li>
 </ul>
 <h2>Quick Setup Instructions for the Impatient</h2>
 <p>Instructions for installing the MuntsOS cross-toolchain development
@@ -173,23 +131,23 @@ PocketBeagle -- ARMv7 32-bit</td>
 </tr>
 <tr valign="top">
 <td><b><tt>muntsos*RaspberryPi1Gadget.zip&nbsp;</tt></b></td>
-<td>For Raspberry Pi 1 A, A+, CM1, Zero, Zero W -- ARMv6 32-bit, USB slave</td>
+<td>For Raspberry Pi 1 A, 1 A+, CM1, Zero, Zero W -- ARMv6 32-bit, USB slave</td>
 </tr>
 <tr valign="top">
 <td><b><tt>muntsos*RaspberryPi2.zip</tt></b></td>
-<td>For all Raspberry Pi 2, 3, Zero 2 -- ARMv7 32-bit, USB master</td>
+<td>For all Raspberry Pi 2, 3, Zero 2 W -- ARMv7 32-bit, USB master</td>
 </tr>
 <tr valign="top">
 <td><b><tt>muntsos*RaspberryPi2Gadget.zip&nbsp;</tt></b></td>
-<td>For Raspberry Pi 3 A+, CM3, and Zero 2 -- ARMv7 32-bit, USB slave</td>
+<td>For Raspberry Pi 3 A+, CM3, and Zero 2 W -- ARMv7 32-bit, USB slave</td>
 </tr>
 <tr valign="top">
 <td><b><tt>muntsos*RaspberryPi3.zip</tt></b></td>
-<td>For all Raspberry Pi 3, Zero 2 -- ARMv8 64-bit, USB master</td>
+<td>For all Raspberry Pi 3, Zero 2 W -- ARMv8 64-bit, USB master</td>
 </tr>
 <tr valign="top">
 <td><b><tt>muntsos*RaspberryPi3Gadget.zip&nbsp;</tt></b></td>
-<td>For Raspberry Pi 3 A+, CM3, and Zero 2 -- ARMv8 64-bit, USB slave</td>
+<td>For Raspberry Pi 3 A+, CM3, and Zero 2 W-- ARMv8 64-bit, USB slave</td>
 </tr>
 <tr valign="top">
 <td><b><tt>muntsos*RaspberryPi4.zip</tt></b></td>
@@ -359,20 +317,28 @@ on the expansion header.</p>
 three-pole A/V jack. They also have several miniature connectors for camera and
 LCD display modules as well as a single 26 or 40 pin 2.54 mm pitch GPIO
 expansion connector.</p>
-<p>All Raspberry Pi 1 models use the same 32-bit ARMv6 kernel and toolchains,
-with different device trees.</p>
+<p>All Raspberry Pi 1 models use the same 32-bit ARMv6 toolchain and kernel,
+but different device trees.</p>
 <p>With the advent of the <a href=
 "https://www.raspberrypi.com/products/raspberry-pi-zero-2-w">Raspberry Pi Zero
-2</a>, all Raspberry Pi 1 models are now obsolete. MuntsOS Embedded Linux will
-continue to support all Raspberry Pi 1 models.</p>
-<h4>Raspberry Pi 2 and 3</h4>
+2 W</a>, all Raspberry Pi 1 models are now obsolete. MuntsOS Embedded Linux
+will continue to support them, albeit with the kernel frozen at 5.15.92.</p>
+<h4>Raspberry Pi 2</h4>
 <p>The <a href=
 "https://www.raspberrypi.com/products/raspberry-pi-2-model-b">Rasbperry Pi 2
-Model B</a> has a 900 MHz BCM2709 ARMv7 Cortex-A7 (900 MHz BCM2710 ARMv8
-Cortex-A53 on later production boards) quad-core CPU and comes with 1 GB of
-RAM. It is mechanically compatible with the Raspberry Pi 1 Model B+, with
-10/100 Ethernet, 4 USB ports, 3.5 mm A/V jack, and a 40-pin GPIO expansion
+Model B</a> has a 900 MHz BCM2709 ARMv7 Cortex-A7 quad-core CPU and comes with
+1 GB of RAM. It is mechanically compatible with the Raspberry Pi 1 Model B+,
+with 10/100 Ethernet, 4 USB ports, 3.5 mm A/V jack, and a 40-pin GPIO expansion
 header.</p>
+<p>The Raspberry Pi 2 uses a unique 32-bit ARMv7 toolchain and kernel.</p>
+<p>The 32-bit Raspberry Pi 2 Model B is now obsolete. MuntsOS Embedded Linux
+will continue to support it, albeit with the kernel frozen at 5.15.92.</p>
+<h4>Raspberry Pi 3</h4>
+<p>The 64-bit <a href=
+"https://www.raspberrypi.com/products/raspberry-pi-2-model-b">Raspberry Pi 2
+Model B</a> Revision 1.2 with the 900 MHz BCM2710 ARMv8 Cortex-A53 quad-core
+CPU can be treated as a power conserving Raspberry Pi 3 Model B− and is useful
+for industrial applications where wired Ethernet is preferred.</p>
 <p>The <a href=
 "https://www.raspberrypi.com/products/raspberry-pi-3-model-b">Rasbperry Pi 3
 Model B</a> has a 1200 MHz BCM2710 ARMv8 Cortex-A53 quad-core CPU and has 1 GB
@@ -392,10 +358,8 @@ improved power management and networking components.</p>
 2</a> has the same form factor as the Raspberry Pi Zero W, with a 1000 MHz
 BCM2710 ARMv8 Cortex-A53 quad core CPU and 512 MB of RAM along with on-board
 Bluetooth and WiFi radios.</p>
-<p>All Raspberry Pi 2 and 3 models can use the same 32-bit ARMv7 kernel and
-toolchains, with different device trees. There are also 64-bit AArch64
-toolchains and ARMv8 kernels available for the Raspberry Pi 3, though with 1 GB
-or less of RAM there is no particular advantage in running 64-bit.</p>
+<p>All Raspberry Pi 3 models use the same AArch64 toolchain (in common with the
+Raspberry Pi 4) and ARMv8 kernels, but different device trees.</p>
 <h4>Raspberry Pi 4</h4>
 <p>The <a href=
 "https://www.raspberrypi.com/products/raspberry-pi-4-model-b">Raspberry Pi 4
@@ -407,44 +371,40 @@ connector instead of micro-USB. Two of the USB ports are 3.0 and two are 2.0. A
 major improvement is a Gigabit Ethernet controller connected via PCI Express
 instead of the USB connected Ethernet used for all earlier models. The
 Raspberry Pi 4 Model B uses the same wireless chip set as the 3+.</p>
-<p>The Raspberry Pi Model 4 B is much more powerful than any previous Raspberry
-Pi, and is completely usable as a general purpose desktop computer. It does
-require significantly more power and generates significantly more heat. It
-supports dual monitors, which is mostly irrelevant for embedded systems. I have
-some doubt about the long term physical robustness of the micro-HDMI
-connectors.</p>
+<p>There are also a myriad of <a href=
+"https://www.raspberrypi.com/products/compute-module-4">Raspberry Pi 4 Compute
+Modules</a>, with varying combinations of wireless Ethernet, RAM and eMMC.</p>
+<p>All Raspberry Pi 4 models use the same AArch64 toolchain (in common with the
+Raspberry Pi 3) and ARMv8 kernels, but different device trees.</p>
 <h4>Raspberry Pi USB Gadget Kernels</h4>
 <p>MuntsOS also provides Raspberry Pi kernels with dedicated <a href=
 "http://www.linux-usb.org/gadget">USB Gadget</a> support enabled. These kernels
-run on Models 1 A, A+, CM1, Zero, Zero Wireless, 3 A+, CM3, Zero 2, 4 B, and
-CM4. You can supply power to and communicate with a compatible Raspberry Pi
-solely through the USB port. This kernel supports USB Network, Raw HID, and
-Serial Port gadgets, selected by bits in the <b><tt>OPTIONS</tt></b> word
-passed on the kernel command line. The USB Gadget Thin Servers have USB Network
-Gadget selected by default.</p>
+run on Models 1 A, 1 A+, CM1, Zero, Zero Wireless, 3 A+, CM3, Zero 2 Wireless,
+4 B, and CM4. You can supply power to and communicate with a compatible
+Raspberry Pi solely through the USB port. This kernel supports USB Network, Raw
+HID, and Serial Port gadgets, selected by bits in the <b><tt>OPTIONS</tt></b>
+word passed on the kernel command line. The USB Gadget Thin Servers have USB
+Network Gadget selected by default.</p>
 <p>The absolute minimum possible usable Raspberry Pi kit consists of a
-Raspberry Pi Zero, Zero W, or Zero 2, a micro-USB cable, and a micro-SD card
+Raspberry Pi Zero, Zero W, or Zero 2 W, a micro-USB cable, and a micro-SD card
 with one of the MuntsOS Raspberry Pi USB Gadget Thin Servers installed.</p>
 <h2>Cross-Toolchains</h2>
-<p>I build a custom Ada/C/C++/Fortran/Go/Modula-2 cross-toolchain for each
-MuntsOS platform family. Each cross-toolchain requires a number of additional
-software component libraries, which are packaged and distributed separately but
-installed into the same directory tree as the parent cross-toolchain.</p>
-<p>I also build <a href="https://www.freepascal.org">Free Pascal</a>
-cross-compilers. These rely on the libraries in the
-Ada/C/C++/Fortran/Go/Modula-2 cross-toolchain package, which must be installed
-first.</p>
-<p>Sometimes cross-toolchains can be shared among different platforms: For
-example, the Raspberry Pi 2 and Raspberry Pi 3 can use the same
-cross-toolchains (the 32-bit ARMv7 cross-toolchains nominally built for the
-Raspberry Pi 2), and the Raspberry Pi 3 and Raspberry Pi 4 can also use the
-same cross-toolchains (the 64-bit AArch64 cross-toolchains nominally built for
-the Raspberry Pi 3).</p>
+<p>I build a custom Ada/C/C++/Fortran/Go/Modula-2 GCC cross-toolchain for each
+MuntsOS platform family. Each GCC cross-toolchain requires a number of
+additional software component libraries, which are packaged and distributed
+separately but installed into the same directory tree as the parent
+cross-toolchain. I also build <a href="https://www.freepascal.org">Free
+Pascal</a> cross-compilers. Each of these rely on the libraries contained in
+the corresponding GCC cross-toolchain package.</p>
+<p>The BeagleBone, Raspberry Pi 1, and Raspberry Pi 2 each require a 32-bit
+ARMv6 or ARMv7 cross-toolchain carefully tuned for their respective CPU and FPU
+cores while all 64-bit platforms use the same AArch64 cross-toolchain.</p>
 <p>Cross-toolchain packages built for <a href=
-"https://www.debian.org">Debian</a> Linux are available at:</p>
+"https://www.debian.org">Debian</a> Linux (both x86-64 and ARM64) development
+host computers are available at:</p>
 <a href="http://repo.munts.com/debian12">http://repo.munts.com/debian12</a>
-<p>RPM packages containing the exact same binaries and known to work on Fedora
-37 and RHEL 9.1 and its derivatives are available at:</p>
+<p>x86-64 RPM packages containing the exact same binaries and known to work on
+Fedora 37 and RHEL 9.1 and its derivatives are available at:</p>
 <a href=
 "http://repo.munts.com/muntsos/rpms">http://repo.munts.com/muntsos/rpms</a>
 <h2>Git Repository</h2>
